Add AppVeyor and symbols package

--- a/src/FsCheckCSharp/FsCheckCSharp.csproj
+++ b/src/FsCheckCSharp/FsCheckCSharp.csproj
@@ -25,6 +25,8 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyName>FsCheckCSharp</AssemblyName>
     <RootNamespace>FsCheckCSharp</RootNamespace>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
