--- a/src/FsCheckCSharp/FsCheckCSharp.csproj
+++ b/src/FsCheckCSharp/FsCheckCSharp.csproj
@@ -14,11 +14,11 @@
     <RepositoryUrl>https://github.com/dsschneidermann/FsCheckCSharp</RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Description>C# support for FsCheck</Description>
-    <PackageReleaseNotes>Initial release.</PackageReleaseNotes>
+    <PackageReleaseNotes></PackageReleaseNotes>
     <Copyright>Copyright 2019</Copyright>
     <PackageTags>FsCheck CSharp</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Product>FsCheckCSharp</Product>
     <RepositoryType>Git</RepositoryType>
     <LangVersion>latest</LangVersion>
@@ -27,6 +27,10 @@
     <RootNamespace>FsCheckCSharp</RootNamespace>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <DocumentationFile>FsCheckCSharp.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
